Add MAX_SCRIPT_ELEMENT_SIZE Add SIGHASH_ANYONECANPAY Enforce canonical signatures

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,6 +10,8 @@ core {
   script {
     #Max size allowed in the Script
     MAX_SIZE = 10000
+    #Max size of a data push the stack
+    MAX_SCRIPT_ELEMENT_SIZE = 520
   }
 
 
